plugins {
	id 'org.springframework.boot' version '2.1.5.RELEASE'
	id 'java'
}

apply plugin: 'io.spring.dependency-management'
apply plugin: 'war'
apply plugin: 'application'
mainClassName = "com.epam.hackme.HackmeApplication"

group = 'com.hackme'
version = '1.0'
sourceCompatibility = '1.8'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	compileOnly 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.19'
	compile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat'
	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
	compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.1.5.RELEASE'
	
}
